--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "node": "16.16.0",
+    "npm": "8.11.0"
+  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@stripe/stripe-js": "^1.3.1",
