--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "16.16.0",
-    "npm": "8.11.0"
+    "node": ">=16.16.0",
+    "npm": ">=8.11.0"
   },
   "scripts": {
     "start": "node server.js",
