--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "engines": {
-    "node": ">=16.16.0",
-    "npm": ">=8.11.0"
+    "node": "=16.16.0",
+    "npm": "=8.11.0"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
