--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server/server.js",
   "engines": {
-    "node": ">=16.16.0",
-    "npm": ">=8.11.0"
+    "node": "=16.16.0",
+    "npm": "=8.11.0"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
